# flatpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
packaging/: entry.py  flatpack.spec
src/flatpack/: __init__.py  analysis.py  cli.py  curves.py  cut.py  distortion.py  export.py  fabric.py  flatten.py  meshutil.py  pipeline.py  seams.py  synthetic.py  tiling.py
src/flatpack/gui/: __init__.py  server.py
src/flatpack/gui/static/: app.js  index.html  style.css
tests/: test_analysis.py  test_cli.py  test_curves.py  test_cut.py  test_darts_marks.py  test_distortion.py  test_edge_labels.py  test_export.py  test_fabric.py  test_flatten.py  test_gui.py  test_open_shapes.py  test_pdf.py  test_seam_markers.py  test_seams.py  test_tiling.py
