[project]
name = "flatpack"
version = "0.1.0"
description = "Flatten 3D backpack shells into 2D fabric panels for MYOG pattern drafting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "trimesh>=4.0",
    "shapely>=2.0",
    "ezdxf>=1.1",
    "pyyaml>=6.0",
]

[project.scripts]
flatpack = "flatpack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    # Reference implementation used only to cross-check our LSCM in tests.
    "libigl>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flatpack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
